Findbugs: Remove dead-code / unused [temp] storage and it's assignment